<resources>
    <string name="app_name">Nirmaan</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Sign Out</string>
    <string name="gb_baas">GB BAAS</string>
    <string name="gb_cb">PKP</string>
    <string name="sap">SAP</string>
    <string name="pcd">PCD</string>
    <string name="sko">SKO</string>
    <string name="utkarsh">UTKARSH</string>
    <string name="disha">DISHA</string>
    <string name="unnati_1">UNNATI 1</string>
    <string name="unnati_2">UNNATI 2</string>
    <string name="home">Home</string>
    <string name="projects">Projects</string>
    <string name="gallery">Gallery</string>
    <string name="contact">Contact</string>
    <string name="updating">No Internet Detected</string>
    <string name="send">Send</string>
    <string name="description">description</string>
    <string name="Attendance">Attendance</string>
    <string name="notes">Notes</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="youth">YOUTH EMPLOYMENT</string>
    <string name="all_nirmaan">ALL NIRMAAN</string>
    <string name="prd">PRD</string>
    <string name="title_activity_note_details">NoteDetails</string>
    <string name="title_activity_add_note">AddNote</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="upload_file_test">Upload File Test</string>
    <string name="folder_name">Folder Name</string>
    <string name="all_pdfs_will_be_displayed_here">All files will be displayed here</string>
    <string name="folder">Folder :</string>
    <string name="Cancel">Cancel</string>
    <string name="choose_files">Choose Files</string>
    <string name="create_folder">Create Folder</string>
    <string name="events">Events</string>
    <string name="all_folders_will_be_displayed_here">All folders will be displayed here</string>
    <string name="delete_prompt">Do you want to delete this folder?</string>
    <string name="add_pdf_files">Add files :</string>
    <string name="none">None</string>
    <string name="files_chosen">Files chosen :</string>
    <string name="pdf_name">File Name</string>
    <string name="confirm">Confirm</string>
    <string name="pdf_del_prompt">Do you want to delete this file?</string>
    <string name="you_have_not_created_any_folders_yet">You have not created any folder yet</string>
    <string name="create_one_now">Create one now!</string>
    <string name="add_files">Add Files :</string>
    <string name="upload_files">Upload Files</string>

</resources>
