<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:fillViewport="false">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/all_nirmaan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:drawableLeft="@drawable/ic_folder_black_24dp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/all_nirmaan"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/gbbs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:background="@color/black"
                    android:drawableLeft="@drawable/ic_folder_black_24dp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/gb_baas"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/disha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:drawableLeft="@drawable/ic_folder_black_24dp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/disha"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/gbcb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:drawableLeft="@drawable/ic_folder_black_24dp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:padding="15dp"

                    android:text="@string/gb_cb"
                    android:textColor="#ffffff"

                    android:textSize="22sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/sap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/sap"
                    android:textColor="#ffffff"
                    android:textSize="22sp"
                    android:background="@color/black"
                    android:drawableLeft="@drawable/ic_folder_black_24dp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:padding="15dp"/>

                <TextView
                    android:id="@+id/pcd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:drawableLeft="@drawable/ic_folder_black_24dp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/pcd"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/sko"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:drawableLeft="@drawable/ic_folder_black_24dp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/sko"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/utkarsh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:drawableLeft="@drawable/ic_folder_black_24dp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/utkarsh"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:orientation="horizontal"
                android:weightSum="2">



                <TextView
                    android:id="@+id/un1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:drawableLeft="@drawable/ic_folder_black_24dp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/unnati_1"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
                <TextView
                    android:id="@+id/un2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:drawableLeft="@drawable/ic_folder_black_24dp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/unnati_2"
                    android:textColor="#ffffff"
                    android:textSize="22sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/youth"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:drawableLeft="@drawable/ic_folder_black_24dp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/youth"
                    android:textColor="#ffffff"
                    android:textSize="22sp"

                    />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</RelativeLayout>

